--- a/index.html
+++ b/index.html
@@ -491,41 +491,40 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Trybe - Desenvolvimento Front-End</h4>
 
-              <span>2007 — 2008</span>
+              <span>2021 — 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Ecossistema React, aproveitando tecnologias como React Router, React Context, React Store e React Hooks. 
+                Essas ferramentas me permitem construir interfaces dinâmicas e interativas, garantindo uma experiência de usuário fluida e eficiente. 
+                Com a combinação dessas tecnologias, crio aplicações front-end robustas, bem estruturadas e facilmente gerenciáveis, proporcionando aos usuários uma jornada agradável e envolvente.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Trybe - Desenvolvimento Front-End</h4>
 
-              <span>2006 — 2007</span>
+              <span>2021 — 2023</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Ecossistema React, aproveitando tecnologias como React Router, React Context, React Store e React Hooks. 
+                Essas ferramentas me permitem construir interfaces dinâmicas e interativas, garantindo uma experiência de usuário fluida e eficiente. 
+                Com a combinação dessas tecnologias, crio aplicações front-end robustas, bem estruturadas e facilmente gerenciáveis, proporcionando aos usuários uma jornada agradável e envolvente.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Ensino Médio - EEMJP</h4>
 
-              <span>2002 — 2004</span>
+              <span>2011 — 2017</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Centro de excelência educacional dedicado a proporcionar aprendizado de qualidade e crescimento acadêmico para seus alunos. 
               </p>
 
             </li>
@@ -548,42 +547,53 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Freelancer</h4>
 
-              <span>2015 — Present</span>
+              <span>2022 — Atualmente</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Desenvolvimento de backend, habilidades sólidas na construção de APIs utilizando Node.js e o renomado framework Express. 
+                Minha abordagem se baseia no modelo de camadas MSC (Model-Service-Controller), o que resulta em uma estrutura robusta e escalável para as aplicações.
+                ORM Sequelize, que me permite administrar bancos de dados como MySQL e MongoDB. Este enfoque promove a modularidade e a adoção das melhores práticas, garantindo a eficiência e a organização dos dados.
+                Já no front-end, minha abordagem engloba o uso de tecnologias como axios, React e React-Bootstrap. Essa combinação resulta em interfaces modernas, adaptáveis e responsivas.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Desenvolvedor Backend + Suporte TibiaKing.com</h4>
 
-              <span>2013 — 2015</span>
+              <span>2019 — 2020</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+
+            Suporte Técnico e Dúvidas:Suporte Técnico e Dúvidas:
+            Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa.
+            Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas.
+            Comunicar atualizações importantes e soluções para problemas recorrentes.Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa. Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas. Comunicar atualizações importantes e soluções para problemas recorrentes. 
+            Competências: Gestão · Metodologias AgileCompetências: Gestão · Metodologias Agile
+            Desenvolvimento BackendDesenvolvimento Backend
+            Utilizar PHP para desenvolver a lógica de negócio e serviços do servidor.
+            Integrar o frontend com o backend para garantir o funcionamento adequado do site
+            Implementar APIs e integrações com sistemas externos.
+           
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Desenvolvedor Front-end TibiaKing.com</h4>
 
-              <span>2010 — 2013</span>
+              <span>2018 — 2019</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+            Desenvolvimento FrontendDesenvolvimento Frontend
+            Utilizar JavaScript e TypeScript para desenvolver a interface do site e aplicativos.
+            Implementar layouts responsivos e interativos para melhor experiência do usuário.
+            Colaborar com a equipe de design para transformar protótipos em código funcional.Utilizar JavaScript e TypeScript para desenvolver a interface do site e aplicativos. Implementar layouts responsivos e interativos para melhor experiência do usuário. Colaborar com a equipe de design para transformar protótipos em código funcional. 
+            Competências: Design de interface do usuário · TypeScript · JavaScriptCompetências: Design de interface do usuário · TypeScript · JavaScript
+
               </p>
 
             </li>
