--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">Educação</h3>
           </div>
 
           <ol class="timeline-list">
@@ -604,19 +604,27 @@
 
         <section class="skill">
 
-          <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title">Ativamente envolvido com estas Stacks de tecnologia no momento.</h3>
 
           <ul class="skills-list content-card">
 
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <h5 class="h5">TypeScript</h5>
+                <!-- <data value="80">80%</data> -->
               </div>
 
-              <div class="skill-progress-bg">
+              <!-- <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div> -->
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">JavaScript</h5>
               </div>
 
             </li>
@@ -624,40 +632,35 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <h5 class="h5">React</h5>
               </div>
 
             </li>
 
             <li class="skills-item">
-
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
+                <h5 class="h5">React-Router</h5>
               </div>
 
             </li>
 
             <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Github</h5>
+              </div>
+
+            </li>
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Docker</h5>
+              </div>
+            </li>
+
+            <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">NodeJs</h5>
               </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
             </li>
 
           </ul>
