--- a/index.html
+++ b/index.html
@@ -505,14 +505,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Trybe - Desenvolvimento Front-End</h4>
+              <h4 class="h4 timeline-item-title">Trybe - Desenvolvimento Back-End</h4>
 
               <span>2021 — 2023</span>
 
               <p class="timeline-text">
-                Ecossistema React, aproveitando tecnologias como React Router, React Context, React Store e React Hooks. 
-                Essas ferramentas me permitem construir interfaces dinâmicas e interativas, garantindo uma experiência de usuário fluida e eficiente. 
-                Com a combinação dessas tecnologias, crio aplicações front-end robustas, bem estruturadas e facilmente gerenciáveis, proporcionando aos usuários uma jornada agradável e envolvente.
+                Desenvolvimento de backend, trago habilidades sólidas na construção de APIs utilizando Node.js e o renomado framework Express. 
+                Minha abordagem se baseia no modelo de camadas MSC (Model-Service-Controller), o que resulta em uma estrutura robusta e escalável para as aplicações.
+                ORM Sequelize, que me permite administrar bancos de dados como MySQL e MongoDB. Este enfoque promove a modularidade e a adoção das melhores práticas, garantindo a eficiência e a organização dos dados.
               </p>
 
             </li>
