--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Fullstack icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -717,11 +717,11 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Back-end</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Fullstack</button>
             </li>
 
           </ul>
@@ -749,11 +749,11 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Back-end</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Fullstack</button>
               </li>
 
             </ul>
@@ -762,7 +762,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Fullstack">
               <a href="https://github.com/Underewarrr/tactical-titans-cs">
 
                 <figure class="project-img">
@@ -770,7 +770,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="Tactical-Titans-CSGO" loading="lazy">
+                  <img src="./assets/images/project-1.png" alt="Tactical-Titans-CSGO" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Tactical-Titans-CSGO</h3>
@@ -780,7 +780,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Fullstack">
               <a href="https://github.com/Underewarrr/nossocha">
 
                 <figure class="project-img">
@@ -834,7 +834,7 @@
               </a>
             </li>     
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="Back-end">
               <a href="https://github.com/Underewarrr/Trybe-Smith">
 
                 <figure class="project-img">
@@ -847,7 +847,7 @@
 
                 <h3 class="project-title">Task Manager Crud</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Back-end</p>
 
               </a>
             </li>
