--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Front-end</button>
             </li>
 
             <li class="filter-item">
@@ -745,7 +745,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Front-end</button>
               </li>
 
               <li class="select-item">
@@ -798,7 +798,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="Front-end">
               <a href="https://github.com/Underewarrr/modern-ui-ux">
 
                 <figure class="project-img">
@@ -816,7 +816,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="Front-end">
               <a href="https://github.com/Underewarrr/trybe-wallet">
 
                 <figure class="project-img">
@@ -1078,11 +1078,12 @@
 
 
             <div class="input-wrapper">
-              <p>Email: Rafhaelxd@gmail.com</p>
+          <h2 class="h2 article-title">Contato : Rafhaelxd@gmail.com</h2>
+
             </div>
 
 
-            <a href="https://wa.me/5535991968159"><button class="form-btn" type="submit" disabled data-form-btn>
+            <a href="https://wa.me/5535991968159"><button class="form-btn" data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Whatsapp</span>
             </button>
