--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 
               <h4 class="h4 timeline-item-title">Ensino Médio - EEMJP</h4>
 
-              <span>2011 — 2017</span>
+              <span>2011 — 2016</span>
 
               <p class="timeline-text">
                 Centro de excelência educacional dedicado a proporcionar aprendizado de qualidade e crescimento acadêmico para seus alunos. 
@@ -811,7 +811,7 @@
 
                 <h3 class="project-title">Modern UI-UX</h3>
 
-                <p class="project-category">Front-End</p>
+                <p class="project-category">Front-end</p>
 
               </a>
             </li>
@@ -832,7 +832,25 @@
                 <p class="project-category">Front-end</p>
 <!--  -->
               </a>
-            </li>     
+            </li>  
+            
+            <li class="project-item  active" data-filter-item data-category="Front-end">
+              <a href="https://github.com/Underewarrr/pokemon-javascript-react-game">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-5.png" alt="Pokemon Game React-JavaScript" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Pokemon Game React-JavaScript</h3>
+
+                <p class="project-category">Front-end</p>
+<!--  -->
+              </a>
+            </li>  
 
             <li class="project-item  active" data-filter-item data-category="Back-end">
               <a href="https://github.com/Underewarrr/Trybe-Smith">
