--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Fullstack icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -521,7 +521,7 @@
 
               <h4 class="h4 timeline-item-title">Ensino Médio - EEMJP</h4>
 
-              <span>2011 — 2016</span>
+              <span>2011 — 2017</span>
 
               <p class="timeline-text">
                 Centro de excelência educacional dedicado a proporcionar aprendizado de qualidade e crescimento acadêmico para seus alunos. 
@@ -713,15 +713,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Front-end</button>
+              <button data-filter-btn>Web design</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Back-end</button>
+              <button data-filter-btn>Applications</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Fullstack</button>
+              <button data-filter-btn>Web development</button>
             </li>
 
           </ul>
@@ -745,15 +745,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Front-end</button>
+                <button data-select-item>Web design</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Back-end</button>
+                <button data-select-item>Applications</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Fullstack</button>
+                <button data-select-item>Web development</button>
               </li>
 
             </ul>
@@ -762,7 +762,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Fullstack">
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://github.com/Underewarrr/tactical-titans-cs">
 
                 <figure class="project-img">
@@ -780,7 +780,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Fullstack">
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://github.com/Underewarrr/nossocha">
 
                 <figure class="project-img">
@@ -798,7 +798,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Front-end">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="https://github.com/Underewarrr/modern-ui-ux">
 
                 <figure class="project-img">
@@ -811,12 +811,12 @@
 
                 <h3 class="project-title">Modern UI-UX</h3>
 
-                <p class="project-category">Front-end</p>
+                <p class="project-category">Front-End</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Front-end">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="https://github.com/Underewarrr/trybe-wallet">
 
                 <figure class="project-img">
@@ -832,27 +832,9 @@
                 <p class="project-category">Front-end</p>
 <!--  -->
               </a>
-            </li>  
-            
-            <li class="project-item  active" data-filter-item data-category="Front-end">
-              <a href="https://github.com/Underewarrr/pokemon-javascript-react-game">
+            </li>     
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="Pokemon Game React-JavaScript" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Pokemon Game React-JavaScript</h3>
-
-                <p class="project-category">Front-end</p>
-<!--  -->
-              </a>
-            </li>  
-
-            <li class="project-item  active" data-filter-item data-category="Back-end">
+            <li class="project-item  active" data-filter-item data-category="applications">
               <a href="https://github.com/Underewarrr/Trybe-Smith">
 
                 <figure class="project-img">
@@ -865,7 +847,7 @@
 
                 <h3 class="project-title">Task Manager Crud</h3>
 
-                <p class="project-category">Back-end</p>
+                <p class="project-category">Applications</p>
 
               </a>
             </li>
@@ -1082,26 +1064,25 @@
           <h2 class="h2 article-title">Contato</h2>
         </header>
 
-        <section class="mapbox" data-mapbox>
+        <!-- <section class="mapbox" data-mapbox>
           <figure>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
-        </section>
+        </section> -->
 
         <section class="contact-form">
 
-          <h3 class="h3 form-title">Formas de contato</h3>
+          
 
 
             <div class="input-wrapper">
-          <h2 class="h2 article-title">Contato : Rafhaelxd@gmail.com</h2>
-
+              <p>Email: Rafhaelxd@gmail.com</p>
             </div>
 
 
-            <a href="https://wa.me/5535991968159"><button class="form-btn" data-form-btn>
+            <a href="https://wa.me/5535991968159"><button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Whatsapp</span>
             </button>
