--- a/index.html
+++ b/index.html
@@ -476,7 +476,12 @@
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
-
+        <a src="./assets//files/pdf/CV-Rafhael-Oliveira-Fullstack.pdf">
+          <button class="form-btn" disabled data-form-btn>
+          <ion-icon name="paper-plane"></ion-icon>
+          <span>Baixar CV</span>
+        </button>
+        </a>
         <section class="timeline">
 
           <div class="title-wrapper">
