--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
+              <button class="active" data-filter-btn>Todos</button>
             </li>
 
             <li class="filter-item">
@@ -746,7 +746,7 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>All</button>
+                <button data-select-item>Todos</button>
               </li>
 
               <li class="select-item">
@@ -852,7 +852,7 @@
 
                 <h3 class="project-title">Task Manager Crud</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Back-end</p>
 
               </a>
             </li>
