--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
         <a src="./assets//files/pdf/CV-Rafhael-Oliveira-Fullstack.pdf">
-          <button class="form-btn" disabled data-form-btn>
+          <button class="form-btn" data-form-btn>
           <ion-icon name="paper-plane"></ion-icon>
           <span>Baixar CV</span>
         </button>
@@ -714,11 +714,11 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>Todos</button>
+              <button class="active" data-filter-btn>All</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Front end</button>
             </li>
 
             <li class="filter-item">
@@ -746,11 +746,11 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>Todos</button>
+                <button data-select-item>All</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Front end</button>
               </li>
 
               <li class="select-item">
@@ -803,7 +803,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="frontend">
               <a href="https://github.com/Underewarrr/modern-ui-ux">
 
                 <figure class="project-img">
@@ -821,7 +821,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="frontend">
               <a href="https://github.com/Underewarrr/trybe-wallet">
 
                 <figure class="project-img">
@@ -853,6 +853,24 @@
                 <h3 class="project-title">Task Manager Crud</h3>
 
                 <p class="project-category">Back-end</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/Underewarrr/pokemon-javascript-react-game">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-5.jpg" alt="Pokemon React-Game" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Pokemon Game Made With React</h3>
+
+                <p class="project-category">Front-end</p>
 
               </a>
             </li>
@@ -1082,12 +1100,11 @@
           
 
 
-            <div class="input-wrapper">
-              <p>Email: Rafhaelxd@gmail.com</p>
-            </div>
+          <h2 class="h2 article-title">Email: Rafhaelxd@gmail.com</h2>
 
 
-            <a href="https://wa.me/5535991968159"><button class="form-btn" type="submit" disabled data-form-btn>
+
+            <a href="https://wa.me/5535991968159"><button class="form-btn" type="submit" data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Whatsapp</span>
             </button>
