--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Front end</button>
+              <button data-filter-btn>Web design</button>
             </li>
 
             <li class="filter-item">
@@ -750,15 +750,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Front end</button>
+                <button data-select-item>Web design (Front-End)</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Applications (Back-End)</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Web development (Fullstack)</button>
               </li>
 
             </ul>
@@ -803,7 +803,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="frontend">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="https://github.com/Underewarrr/modern-ui-ux">
 
                 <figure class="project-img">
@@ -821,7 +821,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="frontend">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="https://github.com/Underewarrr/trybe-wallet">
 
                 <figure class="project-img">
