--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Web design (Front-end)</button>
             </li>
 
             <li class="filter-item">
@@ -750,15 +750,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design (Front-End)</button>
+                <button data-select-item>Web design</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications (Back-End)</button>
+                <button data-select-item>Applications</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development (Fullstack)</button>
+                <button data-select-item>Web development</button>
               </li>
 
             </ul>
