--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Desenvolvimento profissional de aplicativos para iOS e Android Utilizando NodeJS + Electrcon e Typescript.
+                  Desenvolvimento profissional de aplicativos para iOS e Android Utilizando NodeJS + Electron e Typescript.
                 </p>
               </div>
 
@@ -718,7 +718,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design (Front-end)</button>
+              <button data-filter-btn>Front</button>
             </li>
 
             <li class="filter-item">
@@ -803,7 +803,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="front">
               <a href="https://github.com/Underewarrr/modern-ui-ux">
 
                 <figure class="project-img">
@@ -821,7 +821,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="front">
               <a href="https://github.com/Underewarrr/trybe-wallet">
 
                 <figure class="project-img">
