--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
+              <button class="active" data-filter-btn>Todos</button>
             </li>
 
             <li class="filter-item">
@@ -722,11 +722,11 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Back</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Fullstack</button>
             </li>
 
           </ul>
@@ -767,7 +767,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="fullstack">
               <a href="https://github.com/Underewarrr/tactical-titans-cs">
 
                 <figure class="project-img">
@@ -785,7 +785,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="fullstack">
               <a href="https://github.com/Underewarrr/nossocha">
 
                 <figure class="project-img">
@@ -839,7 +839,7 @@
               </a>
             </li>     
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="back">
               <a href="https://github.com/Underewarrr/Trybe-Smith">
 
                 <figure class="project-img">
@@ -857,7 +857,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="front">
               <a href="https://github.com/Underewarrr/pokemon-javascript-react-game">
 
                 <figure class="project-img">
@@ -869,6 +869,24 @@
                 </figure>
 
                 <h3 class="project-title">Pokemon Game Made With React</h3>
+
+                <p class="project-category">Front-end</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="front">
+              <a href="https://github.com/Underewarrr/pokemon-javascript-react-game">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-6.jpg" alt="Star Wars Planet Search" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Star Wars Planet Search</h3>
 
                 <p class="project-category">Front-end</p>
 
