Update Css and more

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Rafhael Oliveira" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Rafhael Oliveira" width="15 0">
         </figure>
 
         <div class="info-content">
@@ -476,7 +476,8 @@
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
-        <a src="./assets//files/pdf/CV-Rafhael-Oliveira-Fullstack.pdf">
+        <a download="CV_Rafhael_Oliveira.pdf" href="./assets//files/pdf/CV-Rafhael-Oliveira-Fullstack.pdf">
+          
           <button class="form-btn" data-form-btn>
           <ion-icon name="paper-plane"></ion-icon>
           <span>Baixar CV</span>
@@ -590,7 +591,7 @@
 
               <h4 class="h4 timeline-item-title">Desenvolvedor Front-end TibiaKing.com</h4>
 
-              <span>2018 — 2019</span>
+              <span>2019 — 2020</span>
 
               <p class="timeline-text">
             Desenvolvimento FrontendDesenvolvimento Frontend
@@ -714,7 +715,7 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>Todos</button>
+              <button class="active" data-filter-btn>All</button>
             </li>
 
             <li class="filter-item">
@@ -727,6 +728,10 @@
 
             <li class="filter-item">
               <button data-filter-btn>Fullstack</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Unity</button>
             </li>
 
           </ul>
@@ -761,11 +766,33 @@
                 <button data-select-item>Web development</button>
               </li>
 
+              <li class="select-item">
+                <button data-select-item>Unity</button>
+              </li>
+
             </ul>
 
           </div>
 
           <ul class="project-list">
+
+            <li class="project-item  active" data-filter-item data-category="unity">
+              <a href="https://github.com/Underewarrr/3d-unity-online-game">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-7.png" alt="Tactical-Titans-CSGO" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">3d-unity-online-game</h3>
+
+                <p class="project-category">Unity</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="fullstack">
               <a href="https://github.com/Underewarrr/tactical-titans-cs">
@@ -865,7 +892,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.jpg" alt="Pokemon React-Game" loading="lazy">
+                  <img src="./assets/images/project-5.png" alt="Pokemon React-Game" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Pokemon Game Made With React</h3>
@@ -883,7 +910,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.jpg" alt="Star Wars Planet Search" loading="lazy">
+                  <img src="./assets/images/project-6.png" alt="Star Wars Planet Search" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Star Wars Planet Search</h3>
