--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,9 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
+  <center>
+    <img src="http://contador.kinghost.com.br/contador.cgi?ft=1|df=underewarrr.github.io">
+  </center>
 </body>
 
 </html>
